[metadata]
name = auditree-arboretum
version = attr: auditree_arboretum.__version__
description = Library of compliance control checks as unit tests
author = IBM Cloudant Infrastructure Team & others
author_email = cldinfra@us.ibm.com
url = https://github.com/ComplianceAsCode/auditree-arboretum
license = Apache Software License v2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
long_description = https://github.com/ComplianceAsCode/auditree-framework

[options]
packages = find:
install_requires =
    auditree-framework
    auditree-harvest

[options.packages.find]
exclude =
    test

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
    nose>=1.3.7
    coverage>=4.5.1
    pre-commit>=2.4.0
    Sphinx>=1.7.2